@@ -47,26 +47,27 @@
             </attribute>
             
             <method name="frameSize" type="uint32_t">
-            Total size in bytes of the Frame object
-                <expr lang="C++" value="sizeof(FrameV1) + {self}.numPixels()*2"/>
+            Total size in bytes of the Frame object including header and pixel data, 
+            this returns the size of FrameV1 object, do not use this config type with FrameV2
+                <expr lang="C++" value="8 + {self}.numPixels()*2"/>
             </method>
 
             <method name="numPixelsX" type="uint32_t">
             calculate frame X size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uWidth + _uBinX - 1) / _uBinX"/>
+                <expr lang="C++" value="({self}.width() + {self}.binX() - 1) / {self}.binX()"/>
             </method>
 
             <method name="numPixelsY" type="uint32_t">
             calculate frame Y size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uHeight+ _uBinY - 1) / _uBinY"/>
+                <expr lang="C++" value="({self}.height()+ {self}.binY() - 1) / {self}.binY()"/>
             </method>
 
             <method name="numPixels" type="uint32_t">
             calculate total frame size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="((_uWidth + _uBinX-1)/ _uBinX )*((_uHeight+ _uBinY-1)/ _uBinY )"/>
+                <expr lang="C++" value="(({self}.width() + {self}.binX()-1)/ {self}.binX() )*(({self}.height()+ {self}.binY()-1)/ {self}.binY() )"/>
             </method>
 
         </pstype>
@@ -115,26 +116,27 @@
             </attribute>
             
             <method name="frameSize" type="uint32_t">
-            Total size in bytes of the Frame object
-                <expr lang="C++" value="sizeof(FrameV1) + {self}.numPixels()*2"/>
+            Total size in bytes of the Frame object including header and pixel data, 
+            this returns the size of FrameV1 object, do not use this config type with FrameV2
+                <expr lang="C++" value="8 + {self}.numPixels()*2"/>
             </method>
 
             <method name="numPixelsX" type="uint32_t">
             calculate frame X size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uWidth + _uBinX - 1) / _uBinX"/>
+                <expr lang="C++" value="({self}.width() + {self}.binX() - 1) / {self}.binX()"/>
             </method>
 
             <method name="numPixelsY" type="uint32_t">
             calculate frame Y size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uHeight+ _uBinY - 1) / _uBinY"/>
+                <expr lang="C++" value="({self}.height()+ {self}.binY() - 1) / {self}.binY()"/>
             </method>
 
             <method name="numPixels" type="uint32_t">
             calculate total frame size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="((_uWidth + _uBinX-1)/ _uBinX )*((_uHeight+ _uBinY-1)/ _uBinY )"/>
+                <expr lang="C++" value="(({self}.width() + {self}.binX()-1)/ {self}.binX() )*(({self}.height()+ {self}.binY()-1)/ {self}.binY() )"/>
             </method>
 
         </pstype>
@@ -183,26 +185,27 @@
             </attribute>
             
             <method name="frameSize" type="uint32_t">
-            Total size in bytes of the Frame object
-                <expr lang="C++" value="sizeof(FrameV1) + {self}.numPixels()*2"/>
+            Total size in bytes of the Frame object including header and pixel data, 
+            this returns the size of FrameV1 object, do not use this config type with FrameV2
+                <expr lang="C++" value="8 + {self}.numPixels()*2"/>
             </method>
 
             <method name="numPixelsX" type="uint32_t">
             calculate frame X size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uWidth + _uBinX - 1) / _uBinX"/>
+                <expr lang="C++" value="({self}.width() + {self}.binX() - 1) / {self}.binX()"/>
             </method>
 
             <method name="numPixelsY" type="uint32_t">
             calculate frame Y size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uHeight+ _uBinY - 1) / _uBinY"/>
+                <expr lang="C++" value="({self}.height()+ {self}.binY() - 1) / {self}.binY()"/>
             </method>
 
             <method name="numPixels" type="uint32_t">
             calculate total frame size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="((_uWidth + _uBinX-1)/ _uBinX )*((_uHeight+ _uBinY-1)/ _uBinY )"/>
+                <expr lang="C++" value="(({self}.width() + {self}.binX()-1)/ {self}.binX() )*(({self}.height()+ {self}.binY()-1)/ {self}.binY() )"/>
             </method>
 
         </pstype>
@@ -260,26 +263,27 @@
             </attribute>
             
             <method name="frameSize" type="uint32_t">
-            Total size in bytes of the Frame object
-                <expr lang="C++" value="sizeof(FrameV1) + {self}.numPixels()*2"/>
+            Total size in bytes of the Frame object including header and pixel data, 
+            this returns the size of FrameV1 object, do not use this config type with FrameV2
+                <expr lang="C++" value="8 + {self}.numPixels()*2"/>
             </method>
 
             <method name="numPixelsX" type="uint32_t">
             calculate frame X size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uWidth + _uBinX - 1) / _uBinX"/>
+                <expr lang="C++" value="({self}.width() + {self}.binX() - 1) / {self}.binX()"/>
             </method>
 
             <method name="numPixelsY" type="uint32_t">
             calculate frame Y size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uHeight+ _uBinY - 1) / _uBinY"/>
+                <expr lang="C++" value="({self}.height()+ {self}.binY() - 1) / {self}.binY()"/>
             </method>
 
             <method name="numPixels" type="uint32_t">
             calculate total frame size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="((_uWidth + _uBinX-1)/ _uBinX )*((_uHeight+ _uBinY-1)/ _uBinY )"/>
+                <expr lang="C++" value="(({self}.width() + {self}.binX()-1)/ {self}.binX() )*(({self}.height()+ {self}.binY()-1)/ {self}.binY() )"/>
             </method>
 
         </pstype>
@@ -340,26 +344,27 @@
             </attribute>
             
             <method name="frameSize" type="uint32_t">
-            Total size in bytes of the Frame object
-                <expr lang="C++" value="sizeof(FrameV1) + {self}.numPixels()*2"/>
+            Total size in bytes of the Frame object including header and pixel data, 
+            this returns the size of FrameV2 object, do not use this config type with FrameV1
+                <expr lang="C++" value="12 + {self}.numPixels()*2"/>
             </method>
 
             <method name="numPixelsX" type="uint32_t">
             calculate frame X size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uWidth + _uBinX - 1) / _uBinX"/>
+                <expr lang="C++" value="({self}.width() + {self}.binX() - 1) / {self}.binX()"/>
             </method>
 
             <method name="numPixelsY" type="uint32_t">
             calculate frame Y size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="(_uHeight+ _uBinY - 1) / _uBinY"/>
+                <expr lang="C++" value="({self}.height()+ {self}.binY() - 1) / {self}.binY()"/>
             </method>
 
             <method name="numPixels" type="uint32_t">
             calculate total frame size in pixels based on the current ROI and binning settings
                 <tag name="inline"/>
-                <expr lang="C++" value="((_uWidth + _uBinX-1)/ _uBinX )*((_uHeight+ _uBinY-1)/ _uBinY )"/>
+                <expr lang="C++" value="(({self}.width() + {self}.binX()-1)/ {self}.binX() )*(({self}.height()+ {self}.binY()-1)/ {self}.binY() )"/>
             </method>
 
         </pstype>
