@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-20
+2013-03-25 Andy Salnikov
+- make princeton DDL usable with HDF5
+
 Tag: V00-04-19
 2013-03-24 Andy Salnikov
 - encoder schema: use new enum-base feature to define attributes 
